[project]
name = "langgraph-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.24",
    "langchain-postgres>=0.0.14",
    "langchain[anthropic,antrhropic]>=0.3.25",
    "langfuse>=3.0.3",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.27",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
